# ralph-any

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/ralph/: __init__.py  __main__.py  cli.py  config.py  detect.py  engine.py  prompt.py
tests/: test_cli.py  test_config.py  test_detect.py  test_engine.py
